--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: https://github.com/becatriz/my-gridsome-site
+  repo: becatriz/my-gridsome-site
 
 media_folder: "static/uploads"
 public_folder: "/uploads"
