--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: becatriz/my-gridsome-site # Branch to update (optional; defaults to master)
 
 media_folder: "static/uploads"
-public_folder: "uploads"
+public_folder: "/uploads"
 
 collections:
 - name: "blog" # Used in routes, e.g., /admin/collections/blog
